--- a/rc2-docker.Rmd
+++ b/rc2-docker.Rmd
@@ -67,6 +67,17 @@ A container runs natively on Linux and shares the kernel of the host machine wit
 
 A [Container Platform](https://www.docker.com/what-docker#/container-platform) provides a complete solution, e.g., the components needed for teaching a data science program. Increasingly these platforms are being built on Kubernetes.
 
+Example: [JupyterHub](https://jupyterhub.readthedocs.io/en/stable/)
+
+JupyterHub allows instances of a single-user Jupyter notebook to be spawned and managed. Two distributions are available:
+
+* The [Littlest JupyterHub](http://tljh.jupyter.org/en/latest/) for 0--50 users on a single machine  
+* [Zero to JupyterHub on Kubernetes](http://z2jh.jupyter.org/en/latest/) for a large number of users and machines  
+
+Example: [RStudio Server Pro with Launcher and Kubernetes](https://support.rstudio.com/hc/en-us/articles/360021328733-FAQ-for-RStudio-Server-Pro-with-Launcher-and-Kubernetes)
+
+RStudio Server is not supported, i.e., Launcher is a Pro product.
+
 ## Images and Containers
 
 The two principal Docker entities are:
